app-starrez/starrez/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: housing-frontend-service
spec:
  selector:
    app: housing-frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  type: ClusterIP
