app-starrez/starrez/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: housing-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - catherine.it.com
    secretName: housing-tls-secret
  rules:
  - host: catherine.it.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: housing-frontend-service
            port:
              number: 80
